test/analyze/type_check/expression/cannot_infer.myte
module test

fun cannotInferExpression() {
  [];
  None;
  Ok (true);
}

fun cannotInferNested() {
  // Only the first/innermost expression has error, parents do not error
  [[[]]];
  [None, None, None];
  [][0];
}

fun main() {}